k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service

spec:
  type: NodePort

  selector:
    app: employee-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30009
